--- a/tourist_accommodation_SSRS/tourist_accommodation_SSRS/R_menu.rdl
+++ b/tourist_accommodation_SSRS/tourist_accommodation_SSRS/R_menu.rdl
@@ -9,7 +9,7 @@
       <am:Name>SSDTRS</am:Name>
       <am:Version>17.11.35327.3</am:Version>
     </am:UpdatedBy>
-    <am:LastModifiedTimestamp>2025-01-19T00:18:42.8740761Z</am:LastModifiedTimestamp>
+    <am:LastModifiedTimestamp>2025-01-19T14:16:09.3728082Z</am:LastModifiedTimestamp>
   </am:AuthoringMetadata>
   <df:DefaultFontFamily>Segoe UI</df:DefaultFontFamily>
   <AutoRefresh>0</AutoRefresh>
@@ -98,7 +98,9 @@
                 <TextRuns>
                   <TextRun>
                     <Value>Wykorzystanie miejsc noclegowych</Value>
-                    <Style />
+                    <Style>
+                      <FontWeight>Bold</FontWeight>
+                    </Style>
                   </TextRun>
                 </TextRuns>
                 <Style />
@@ -114,12 +116,13 @@
                 </Action>
               </Actions>
             </ActionInfo>
-            <Top>0.06944in</Top>
+            <Top>0.67583in</Top>
+            <Left>10.30111cm</Left>
             <Height>0.40278in</Height>
             <Width>2.35417in</Width>
             <Style>
               <Border>
-                <Style>None</Style>
+                <Style>Solid</Style>
               </Border>
               <PaddingLeft>2pt</PaddingLeft>
               <PaddingRight>2pt</PaddingRight>
@@ -135,7 +138,9 @@
                 <TextRuns>
                   <TextRun>
                     <Value>Porównanie turystów lokalnych i zagranicznych</Value>
-                    <Style />
+                    <Style>
+                      <FontWeight>Bold</FontWeight>
+                    </Style>
                   </TextRun>
                 </TextRuns>
                 <Style />
@@ -151,10 +156,82 @@
                 </Action>
               </Actions>
             </ActionInfo>
-            <Top>0.47222in</Top>
+            <Top>1.07861in</Top>
+            <Left>10.30111cm</Left>
             <Height>0.45833in</Height>
             <Width>2.35417in</Width>
             <ZIndex>1</ZIndex>
+            <Style>
+              <Border>
+                <Style>Solid</Style>
+              </Border>
+              <PaddingLeft>2pt</PaddingLeft>
+              <PaddingRight>2pt</PaddingRight>
+              <PaddingTop>2pt</PaddingTop>
+              <PaddingBottom>2pt</PaddingBottom>
+            </Style>
+          </Textbox>
+          <Textbox Name="Textbox2">
+            <CanGrow>true</CanGrow>
+            <KeepTogether>true</KeepTogether>
+            <Paragraphs>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>Raport trendów sezonowych</Value>
+                    <Style>
+                      <FontWeight>Bold</FontWeight>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <Style />
+              </Paragraph>
+            </Paragraphs>
+            <rd:DefaultName>Textbox2</rd:DefaultName>
+            <ActionInfo>
+              <Actions>
+                <Action>
+                  <Drillthrough>
+                    <ReportName>R3</ReportName>
+                  </Drillthrough>
+                </Action>
+              </Actions>
+            </ActionInfo>
+            <Top>1.53694in</Top>
+            <Left>4.05555in</Left>
+            <Height>0.30778in</Height>
+            <Width>2.35417in</Width>
+            <ZIndex>2</ZIndex>
+            <Style>
+              <Border>
+                <Style>Solid</Style>
+              </Border>
+              <PaddingLeft>2pt</PaddingLeft>
+              <PaddingRight>2pt</PaddingRight>
+              <PaddingTop>2pt</PaddingTop>
+              <PaddingBottom>2pt</PaddingBottom>
+            </Style>
+          </Textbox>
+          <Textbox Name="Textbox5">
+            <CanGrow>true</CanGrow>
+            <KeepTogether>true</KeepTogether>
+            <Paragraphs>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>Raporty do wyboru:</Value>
+                    <Style />
+                  </TextRun>
+                </TextRuns>
+                <Style />
+              </Paragraph>
+            </Paragraphs>
+            <rd:DefaultName>Textbox5</rd:DefaultName>
+            <Top>0.41194in</Top>
+            <Left>4.05555in</Left>
+            <Height>0.25in</Height>
+            <Width>2.35417in</Width>
+            <ZIndex>3</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -165,7 +242,7 @@
               <PaddingBottom>2pt</PaddingBottom>
             </Style>
           </Textbox>
-          <GaugePanel Name="GaugePanel1">
+          <GaugePanel Name="GaugePanel3">
             <RadialGauges>
               <RadialGauge Name="RadialGauge1">
                 <GaugeScales>
@@ -218,6 +295,33 @@
                         <Width>30</Width>
                       </RadialPointer>
                     </GaugePointers>
+                    <ScaleRanges>
+                      <ScaleRange Name="RadialRange1">
+                        <Style>
+                          <Border>
+                            <Color>Silver</Color>
+                            <Style>Solid</Style>
+                          </Border>
+                          <BackgroundColor>#00ffffff</BackgroundColor>
+                          <BackgroundGradientType>DiagonalLeft</BackgroundGradientType>
+                          <BackgroundGradientEndColor>Salmon</BackgroundGradientEndColor>
+                          <BackgroundHatchType>None</BackgroundHatchType>
+                          <ShadowOffset>0pt</ShadowOffset>
+                        </Style>
+                        <DistanceFromScale>30</DistanceFromScale>
+                        <StartValue>
+                          <Value>1</Value>
+                          <Multiplier>1</Multiplier>
+                        </StartValue>
+                        <EndValue>
+                          <Value>20</Value>
+                          <Multiplier>1</Multiplier>
+                        </EndValue>
+                        <StartWidth>15</StartWidth>
+                        <EndWidth>30</EndWidth>
+                        <Placement>Inside</Placement>
+                      </ScaleRange>
+                    </ScaleRanges>
                     <Style>
                       <Border>
                         <Style>None</Style>
@@ -231,7 +335,7 @@
                     <Interval>NaN</Interval>
                     <IntervalOffset>NaN</IntervalOffset>
                     <MaximumValue>
-                      <Value>=Fields!OBS_VALUE.Value*2</Value>
+                      <Value>=Sum(Fields!OBS_VALUE.Value, "DataSet1")*2</Value>
                       <Multiplier>1</Multiplier>
                     </MaximumValue>
                     <MinimumValue>
@@ -331,7 +435,7 @@
                       <IntervalOffset>NaN</IntervalOffset>
                       <DistanceFromScale>0</DistanceFromScale>
                       <Placement>Outside</Placement>
-                      <ShowEndLabels>=Fields!OBS_VALUE.Value*2</ShowEndLabels>
+                      <ShowEndLabels>true</ShowEndLabels>
                       <UseFontPercent>true</UseFontPercent>
                     </ScaleLabels>
                     <Width>30</Width>
@@ -374,7 +478,7 @@
             </RadialGauges>
             <GaugeLabels>
               <GaugeLabel Name="GaugeLabel1">
-                <Text>=Fields!OBS_VALUE.Value</Text>
+                <Text>=Sum(Fields!OBS_VALUE.Value, "DataSet1")</Text>
                 <TextShadowOffset>0pt</TextShadowOffset>
                 <UseFontPercent>true</UseFontPercent>
                 <Style>
@@ -396,27 +500,6 @@
                 <Height>40</Height>
                 <Width>40</Width>
                 <ParentItem>RadialGauges.RadialGauge1</ParentItem>
-              </GaugeLabel>
-              <GaugeLabel Name="GaugeLabel2">
-                <Text>Łaczna liczba noclegów</Text>
-                <ResizeMode>None</ResizeMode>
-                <TextShadowOffset>0pt</TextShadowOffset>
-                <UseFontPercent>true</UseFontPercent>
-                <Style>
-                  <Border>
-                    <Style>None</Style>
-                  </Border>
-                  <BackgroundColor>#00ffffff</BackgroundColor>
-                  <BackgroundGradientType>None</BackgroundGradientType>
-                  <BackgroundGradientEndColor>#00ffffff</BackgroundGradientEndColor>
-                  <FontSize>16pt</FontSize>
-                  <Color>#404040</Color>
-                  <ShadowOffset>0pt</ShadowOffset>
-                </Style>
-                <Top>84.5161209106445</Top>
-                <Left>38.241756439209</Left>
-                <Height>9</Height>
-                <Width>21</Width>
               </GaugeLabel>
             </GaugeLabels>
             <AutoLayout>true</AutoLayout>
@@ -449,11 +532,11 @@
               <Value />
             </TopImage>
             <DataSetName>DataSet1</DataSetName>
-            <Top>0.04167in</Top>
-            <Left>2.42361in</Left>
-            <Height>2.15972in</Height>
-            <Width>3.16667in</Width>
-            <ZIndex>2</ZIndex>
+            <Top>2.15722in</Top>
+            <Left>3.71056in</Left>
+            <Height>2in</Height>
+            <Width>3in</Width>
+            <ZIndex>4</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -465,7 +548,7 @@
         <Height>5.54056in</Height>
         <Style />
       </Body>
-      <Width>8.84722in</Width>
+      <Width>9.12028in</Width>
       <Page>
         <PageHeader>
           <Height>2.54cm</Height>
@@ -491,8 +574,9 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>textbox1</rd:DefaultName>
+              <Left>10.30111cm</Left>
               <Height>0.43in</Height>
-              <Width>5in</Width>
+              <Width>2.35417in</Width>
               <Style>
                 <PaddingLeft>2pt</PaddingLeft>
                 <PaddingRight>2pt</PaddingRight>
