--- a/tourist_accommodation_SSRS/tourist_accommodation_SSRS/R1.rdl
+++ b/tourist_accommodation_SSRS/tourist_accommodation_SSRS/R1.rdl
@@ -9,7 +9,7 @@
       <am:Name>SSDTRS</am:Name>
       <am:Version>17.11.35327.3</am:Version>
     </am:UpdatedBy>
-    <am:LastModifiedTimestamp>2025-01-19T15:16:35.1674515Z</am:LastModifiedTimestamp>
+    <am:LastModifiedTimestamp>2025-01-19T21:05:35.0210849Z</am:LastModifiedTimestamp>
   </am:AuthoringMetadata>
   <df:DefaultFontFamily>Segoe UI</df:DefaultFontFamily>
   <AutoRefresh>0</AutoRefresh>
@@ -142,7 +142,7 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>Report1</Value>
+                    <Value>Wykorzystanie miejsc noclegowych</Value>
                     <Style>
                       <FontFamily>Segoe UI Light</FontFamily>
                       <FontSize>24pt</FontSize>
